<resources>
    <string name="app_name">Sports Video Tagging</string>
    <string name="startTaggingBtn_txt">Start Tagging Match</string>
    <string name="configTaggingOptsBtn_txt">Configure Tagging Options</string>
    <string name="noTeamsAlertTitle">No teams existing</string>
    <string name="noTeamsAlertMessage">There were no teams created yet. To start tagging a match, please choose \'Configure Tagging Options\' and add teams first.</string>
    <string name="noEventTypesAlertTitle">No Event Tags Existing</string>
    <string name="noEventTypesAlertMessage">"There were no event tags created yet. To tag a match there needs to be at least one label created at 'Configure Tagging Options'. "</string>
    <string name="title_activity_configuration">ConfigurationActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_tagging">TaggingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="editTeamsBtn_txt">Teams (+ Players)</string>
    <string name="editEventTypesBtn_txt">Event Types</string>
    <string name="editEventAttributesBtn_txt">Event Attributes</string>
    <string name="configurationHeader_txt">Configure Tagging Options</string>
    <string name="noTeamName">No team added. Team name was empty</string>
    <string name="addFAB_text">Add team</string>
    <string name="openSubMenuIconDesc">Open Sub Menu</string>
    <string name="addTeamAlertTitle_txt">Add team</string>
    <string name="addTeamAlertMessage_txt">Enter name of the team:</string>
    <string name="deleteTeamTitle_txt">Delete Team</string>
    <string name="deleteTeamMessage_txt">"Are you sure you want to delete team '%1s'? "</string>
    <string name="deletePlayerTitle_txt">Delete Player</string>
    <string name="deletePlayerMessage_txt">"Are you sure you want to delete the selected player? "</string>
    <string name="playerNameLbl_text">Player Name:</string>
    <string name="playerNumberLbl_text">Jersey Number:</string>
    <string name="addPlayerTitle">Add Player</string>
    <string name="team">Team</string>
    <string name="addPlayerMessage">Enter details of the new player</string>
    <string name="teamAlreadyExists">No team created. Team already existing!</string>
    <string name="playerNumberEmpty">No player created. Player number can\'t be empty</string>
    <string name="playerAlreadyExists">No player created. Player with entered details exists already</string>
    <string name="editTeams">Edit Teams</string>
    <string name="editAttributesHeader_txt">Edit Attributes</string>
    <string name="deleteAttributeTitle_txt">Delete Attribute</string>
    <string name="deleteAttributeMessage_txt">Are you sure you want to delete the attribute %1s?</string>
    <string name="addAttributeTitle_txt">Add Attribute</string>
    <string name="addAttributeMessage_txt">Enter name of the event attribute</string>
    <string name="attributeAlreadyExists">No attribute created. Attribute with the entered name exists already</string>
    <string name="noAttributeName">No attribute created. No attribute name was specified</string>
    <string name="editEventTypesHeader_txt">Edit Event Types</string>
    <string name="deleteEventTypeTitle_txt">Delete Event Type</string>
    <string name="deleteEventTypeMessage_txt">Do you really want to delete the event type \'%1s\'?</string>
    <string name="timerTextViewTemplate">%1s hh:mm:ss</string>
    <string name="active">Active</string>
    <string name="long_time_event_txt">Long Time Event:</string>
    <string name="longTimedEventCheck_contentDesc">Is long time Event Check</string>
    <string name="player_selection">Player Selection:</string>
    <string name="playerSelectionCheck_contentDesc">Player Selection Allowed Checkmark</string>
    <string name="attributes_allowed">Attributes Allowed:</string>
    <string name="attributesAllowedCheck_contentDesc">Attributes Allowed Checkmark</string>
    <string name="timeOffsetWithVars">Time Offset: %1$s min:sec</string>
    <string name="minute_abbrev">minutes</string>
    <string name="second_abbrev">seconds</string>
    <string name="timeOffsetMinus_txt">- (subtract from event timestamp)</string>
    <string name="timeOffsetPlus_txt">+ (add to event timestamp)</string>
    <string name="time_offset">Time Offset</string>
    <string name="title">Title</string>
    <string name="long_timed_event">Long Timed Event</string>
    <string name="enable_player_selection">Enable Player Selection</string>
    <string name="allow_setting_attributes">Allow Setting Attributes</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="addEventType">Add Event Type</string>
    <string name="noEventTypeTitle">Please enter Event Type title before saving.</string>
    <string name="event_type_options">Event Type Options</string>
    <string name="preTaggingScreenMessage">Enter match details before you start tagging</string>
    <string name="home_team">Home Team</string>
    <string name="match_date">Match Date</string>
    <string name="match_time">Match Time</string>
    <string name="away_team">Away Team</string>
    <string name="continue_btn_txt">Continue</string>
    <string name="edit_home_team_players_btn">Edit Home Team Players</string>
    <string name="edit_away_team_players_btn">Edit Away Team Players</string>
    <plurals name="numberOfPlayers">
        <item quantity="one">%d player</item>
        <item quantity="other">%d players</item>
    </plurals>
    <string name="undo">Undo</string>
    <string name="start_match_tagging">Start Match Tagging</string>
    <string name="stopMatchTagging">Stop Match Tagging</string>
    <string name="noTimerStarted_TextViewValue">00:00:00 hh:mm:ss</string>
    <string name="tagCounterTextViewValue">Numer of Tags: %1d</string>
    <string name="player_Selection_Header_Txt">Select Players for Event</string>
    <string name="expand_icon">expand Icon</string>
    <string name="sameTeamError">Home and away team can\'t be the same</string>
    <string name="checkmark">checkmark</string>
    <string name="match_event_details">Match Event Details</string>
    <string name="save_match_event">Save Match Event</string>
    <string name="add_attributes_optional">Add Attributes (optional)</string>
    <string name="add_following_event_optional">Add Follow-Up Event (Optional)</string>
    <string name="addAttributesToEventDialogTitle">Select Attributes for Event</string>
    <string name="noFollowingEvent">No follow-up event entered</string>
    <string name="headerFollowUpEventSelection">Select Follow-Up Event from List below</string>
    <string name="followUpSaveActionTxt">Save with\nselected Players</string>
    <string name="headerFollowUpPlayerSelection">Select players of follow-up event. Saving without player selection is also possible.</string>
    <string name="selectAttributesForFollowUp">Select Attributes for follow-up event.</string>
    <string name="followUpEventAdded">Added follow-up event of type %1s</string>
    <string name="finalScoreDialogTitle_txt">Final Score</string>
    <string name="finalScoreDialogMessage_txt">Enter final score of the match</string>
    <string name="away_team_score">Away Team Score</string>
    <string name="home_team_score">Home Team Score</string>
    <string name="teamPlaceholderScore_txt">%1s Score</string>
    <string name="invalidScoreMessage">Invalid Score entered!</string>
    <string name="followUpEvent">Follow Up Event</string>
    <string name="view_tagged_matches">View Tagged Matches</string>
    <string name="taggedMatches">Tagged Matches</string>
    <string name="minusSign">-</string>
    <string name="matchActionsTitle">Match Actions</string>
    <string name="matchActionsMessage">The following actions for the match are available</string>
    <string name="deleteTaggedMatchTitle">Delete Tagged Match?</string>
    <string name="deleteTaggedMatchMessage">You really want to delete the match and all tags of it?</string>
    <string name="addLongTimedEventType">Add Long Timed Event Type</string>
    <string name="switchable">Switchable</string>
    <string name="event_title">Event Title</string>
    <string name="toggleable">Toggleable</string>
    <string name="switchable_event_title">Switchable Event Title</string>
    <string name="swap_image">Swap Image</string>
</resources>