<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">


    <Button
        android:id="@+id/editTeamsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editTeamsBtn_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/editEventTypesBtn"/>

    <Button
        android:id="@+id/editEventTypesBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editEventTypesBtn_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTeamsBtn"
        app:layout_constraintBottom_toTopOf="@id/editAttributesBtn"/>

    <Button
        android:id="@+id/editAttributesBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editEventAttributesBtn_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEventTypesBtn" />

    <TextView
        android:id="@+id/configurationHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/configurationHeader_txt"
        android:textAppearance="@android:style/TextAppearance.Material.Headline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>